Fix Maßschuhe Body Overflow

--- a/style/scss/partials/massschuhe.scss
+++ b/style/scss/partials/massschuhe.scss
@@ -1,6 +1,5 @@
 .page-massschuhe {
     position: relative;
-    width: 100vw;
     background-color: $background-lightgrey;
 
     .page-massschuhe-inner {
